<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="25dp"
    android:background="@color/luffy_hat"
    tools:context=".InfoActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/luffy_round"
        android:layout_marginBottom="25dp"
        android:contentDescription="@string/img_desc_luffy_round" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_info"
        android:textSize="@dimen/title_size"
        android:textAlignment="center"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:contentDescription="@string/img_desc_melvin"
            android:src="@drawable/mel" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="@dimen/btn_margin">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    android:id="@+id/info_nom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info_nom"
                    android:textSize="@dimen/btn_text_size"
                    android:textStyle="bold"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />
                <TextView
                    android:id="@+id/info_nom_res"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info_nom_res"
                    android:textSize="@dimen/info_text_size"
                    android:textStyle="italic"
                    android:fontFamily="cursive"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentTop="true" />

                <TextView
                    android:id="@+id/info_surnom"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info_surnom"
                    android:textSize="@dimen/btn_text_size"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/btn_margin"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@id/info_nom"/>
                <TextView
                    android:id="@+id/info_surnom_res"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info_surnom_res"
                    android:textSize="@dimen/info_text_size"
                    android:textStyle="italic"
                    android:fontFamily="cursive"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/info_surnom" />

                <TextView
                    android:id="@+id/info_origin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info_origin"
                    android:textSize="@dimen/btn_text_size"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/btn_margin"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@id/info_surnom" />
                <TextView
                    android:id="@+id/info_origin_res"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info_origin_res"
                    android:textSize="@dimen/info_text_size"
                    android:textStyle="italic"
                    android:fontFamily="cursive"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/info_origin" />

                <TextView
                    android:id="@+id/info_prime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info_prime"
                    android:textSize="@dimen/btn_text_size"
                    android:textStyle="bold"
                    android:layout_marginTop="@dimen/btn_margin"
                    android:layout_alignParentStart="true"
                    android:layout_alignTop="@id/info_origin"/>
                <TextView
                    android:id="@+id/info_prime_res"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/text_info_prime_res"
                    android:textSize="@dimen/info_text_size"
                    android:textStyle="italic"
                    android:fontFamily="cursive"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@id/info_prime" />
            </RelativeLayout>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:scaleType="centerCrop"
                android:src="@drawable/luffy_round"
                android:layout_marginTop="@dimen/btn_height"
                android:contentDescription="@string/img_desc_luffy_round" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>