<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/luffy_hat"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/img_luffy"
        android:layout_width="wrap_content"
        android:layout_height="280dp"
        android:src="@drawable/luffy"

        app:layout_constraintBottom_toTopOf="@+id/line_main_middleView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/img_desc_luffy" />

    <TextView
        android:id="@+id/line_main_middleView"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/line_main_middleView">

        <TextView
            android:id="@+id/title_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_input_username"
            android:textSize="@dimen/input_text_size"
            android:labelFor="@id/et_login_username" />

        <EditText
            android:id="@+id/et_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:imeOptions="actionDone"
            android:autofillHints="username"
            android:textColor="@color/luffy_scar"
            android:layout_marginBottom="@dimen/et_margin_bottom"/>

        <TextView
            android:id="@+id/title_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_input_password"
            android:textSize="@dimen/input_text_size"
            android:labelFor="@id/et_login_password"/>

        <EditText
            android:id="@+id/et_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:textColor="@color/luffy_scar"
            android:layout_marginBottom="@dimen/et_margin_bottom"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/btn_valid"
                android:textColor="@color/luffy_hairs"
                android:textSize="@dimen/btn_text_size"
                android:enabled="false"/>

        </LinearLayout>

    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>